...
            placeholder={locationType === "from" ? t('autocomplete.search_pickup') : locationType === "stop" ? t('autocomplete.search_stop') : t('home.search')}
            placeholderTextColor={textSecondary}
            value={query}
            onChangeText={setQuery}
            className="flex-1 text-base ml-3"
            style={{ color: textPrimary }}
           testID="customer.autocomplete.set-query"/>
          {query.length > 0 && (
            <TouchableOpacity onPress={() => setQuery("")} testID="customer.autocomplete.set-query-2">
              <Image
                source={icons.close}
                className="w-5 h-5 ml-2"
                style={{ tintColor: textSecondary }}
...
          showsHorizontalScrollIndicator={false}
          renderItem={({ item }) => (
            <TouchableOpacity
              onPress={() => handlePlaceSelect(item)}
              className="p-4 border-b"
              style={{ borderBottomColor: borderColor }}
             testID="customer.autocomplete.handle-place-select">
              <Text className="text-xl" style={{ color: textPrimary }}>
                {item.address ||
                  item.place_name ||
                  item.display_name ||
                  item.name}
              </Text>
...
